# tf_pt_benchmarking

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .style.yapf  BLOG.md  README.md  pyproject.toml
.github/workflows/: run_isort.yml  run_yapf.yml
tfvspt/: base.py  download_data.py  logger.py  main.py  utils.py
tfvspt/assets/: config.yaml
tfvspt/config/: config.py
tfvspt/pt/: data.py  eval.py  main.py  model.py  train.py  utils.py
tfvspt/pt/notebooks/: eval.ipynb  train.ipynb
tfvspt/tf/: data.py  main.py  model.py  utils.py
tfvspt/tf/notebooks/: eval.ipynb  train.ipynb
